err/incuna-feincms.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/incuna_feincms-2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/incunafein'...
Listing './lib/python3.5/site-packages/incunafein/admin'...
Listing './lib/python3.5/site-packages/incunafein/content'...
Compiling './lib/python3.5/site-packages/incunafein/content/__init__.py'...
***   File "./lib/python3.5/site-packages/incunafein/content/__init__.py", line 27
    raise ImproperlyConfigured, "You have to add '%s' to your INSTALLED_APPS before creating a %s" % (cls.app_label, cls.__name__)
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/incunafein/content/medialibrary'...
Listing './lib/python3.5/site-packages/incunafein/content/paypal'...
Listing './lib/python3.5/site-packages/incunafein/content/video'...
Compiling './lib/python3.5/site-packages/incunafein/content/video/models.py'...
***   File "./lib/python3.5/site-packages/incunafein/content/video/models.py", line 32
    raise ImproperlyConfigured, 'You have to add \'videos\' to your INSTALLED_APPS before creating a %s' % cls.__name__
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/incunafein/content/videosection'...
Compiling './lib/python3.5/site-packages/incunafein/content/videosection/models.py'...
***   File "./lib/python3.5/site-packages/incunafein/content/videosection/models.py", line 38
    raise ImproperlyConfigured, 'You have to add \'feincms.module.medialibrary\' to your INSTALLED_APPS before creating a %s' % cls.__name__
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/incunafein/fixtures'...
Listing './lib/python3.5/site-packages/incunafein/management'...
Listing './lib/python3.5/site-packages/incunafein/management/commands'...
Listing './lib/python3.5/site-packages/incunafein/module'...
Listing './lib/python3.5/site-packages/incunafein/module/medialibrarychapters'...
Listing './lib/python3.5/site-packages/incunafein/module/medialibrarychapters/extensions'...
Listing './lib/python3.5/site-packages/incunafein/module/navigation'...
Listing './lib/python3.5/site-packages/incunafein/module/navigation/templates'...
Listing './lib/python3.5/site-packages/incunafein/module/navigation/templates/navigation'...
Listing './lib/python3.5/site-packages/incunafein/module/navigation/templatetags'...
Listing './lib/python3.5/site-packages/incunafein/module/page'...
Listing './lib/python3.5/site-packages/incunafein/module/page/extensions'...
Listing './lib/python3.5/site-packages/incunafein/templates'...
Listing './lib/python3.5/site-packages/incunafein/templates/content'...
Listing './lib/python3.5/site-packages/incunafein/templates/content/videocontent'...
Listing './lib/python3.5/site-packages/incunafein/templates/content/videosection'...
Listing './lib/python3.5/site-packages/incunafein/templates/incunafein'...
Listing './lib/python3.5/site-packages/incunafein/templates/incunafein/page'...
Listing './lib/python3.5/site-packages/incunafein/templates/search'...
Listing './lib/python3.5/site-packages/incunafein/templates/search/indexes'...
Listing './lib/python3.5/site-packages/incunafein/templates/search/indexes/page'...
Listing './lib/python3.5/site-packages/incunafein/templates/search/indexes/page/_includes'...
Listing './lib/python3.5/site-packages/incunafein/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
